Photo Dialog Photos in Rx and Exams Contact Qty in Orders Order balance in main table Data Grid not showing all rows bug Insurance Com not coming

--- a/client/src/app/main/apps/e-commerce/Customers/Search.css
+++ b/client/src/app/main/apps/e-commerce/Customers/Search.css
@@ -14,7 +14,15 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.custom-height {
+  height: 850px;
+}
 
+@media (min-width: 1024px) {
+  .custom-height-lg {
+    height: 650px;
+  }
+}
 
 /* Header */
 
